# gemini-export-freebuff

./: .dockerignore  .env.example  .gitignore  Dockerfile  FEJLESZTESI_OTLETEK.md  README.md  ROADMAP.md  ai_layer.py  app.py  desktop_app.py  docker-compose.yml  export.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml  release.yml  test.yml
gemini_export/: __init__.py  ai_providers.py  chat_import.py  cli.py  config.py  cookie_store.py  exporter.py  formatters.py  image_utils.py  local_embedding.py  logging_config.py  manifest.py  pagination.py  pdf_formatter.py  prompt_templates.py  scheduler.py  search.py  template_engine.py  utils.py
prompts/: compare.txt  rag_query.txt  summarize.txt  tags.txt  todos.txt
static/: manifest.json  sw.js
static/icons/: generate_icons.py
templates/: dashboard.html  index.html  login.html
tests/: test_api.py  test_helpers.py  test_knowledge.py
