[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-chat-exporter"
version = "1.0.0"
description = "Teljes Gemini beszélgetés-exportáló eszköz kereshető tudástárral, webes dashboarddal és AI elemzéssel"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Gemini Chat Exporter Contributors"},
]
requires-python = ">=3.10"
keywords = ["gemini", "chat", "export", "backup", "ai", "knowledge-base", "fts5"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Web Environment",
    "Framework :: Flask",
]
dependencies = [
    "gemini_webapi>=2.0.0",
    "python-dotenv>=1.0.0",
    "browser-cookie3>=0.19.0",
    "flask>=3.0.0",
    "orjson>=3.9.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "keyring>=25.0.0",
]
rate-limit = ["flask-limiter>=1.5.0"]
pdf = ["weasyprint>=60.0"]
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]
schedule = ["apscheduler>=3.10"]
full = [
    "gemini-chat-exporter[ai,rate-limit,pdf,desktop,schedule]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/user/gemini-export"
Documentation = "https://github.com/user/gemini-export#readme"
Repository = "https://github.com/user/gemini-export"
Issues = "https://github.com/user/gemini-export/issues"

[project.scripts]
gemini-export = "export:main"

[tool.setuptools]
packages = ["gemini_export"]
py_modules = ["export", "app", "ai_layer", "setup", "desktop_app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["export", "app", "ai_layer"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
